--- a/dude-graph.html
+++ b/dude-graph.html
@@ -128,7 +128,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <script src="../lodash/lodash.js"></script>
 <script src="dude-graph.js"></script>
 <script>
-    var CgElement = Polymer({
+    var DudeGraph = Polymer({
 
         is: "dude-graph",
 
