--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -214,7 +214,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         </div>
     </template>
     <script>
-        var CgInspector = Polymer({
+        var DudeGraphInspector = Polymer({
 
             is: "dude-graph-inspector",
 
