--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -219,12 +219,12 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             is: "dude-graph-inspector",
 
             properties: {
-                models: {
-                    type: Object,
-                    value: {}
+                "models": {
+                    "type": Object,
+                    "value": {}
                 },
-                element: {
-                    type: CgElement
+                "element": {
+                    type: DudeGraph
                 }
             },
             ready: function () {
