Fixed missing polymer include

--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -3,9 +3,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <link rel="import" href="../polymer/polymer.html">
 <!--
-`dude-graph` is a Polymer element which creates a dudeGraph svg renderer which can be manipulated using several methods and properties.
+`dude-graph-editor` is a Polymer element which creates a dudeGraph svg renderer which can be manipulated using several methods and properties.
 
-@group dude-graph
+@group dude-graph-editor
 @element dude-graph
 @demo demo/index.html
 -->
