--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -1,12 +1,13 @@
 <!--
 Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
-<link rel="stylesheet" href="../font-awesome/css/font-awesome.css">
+<link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-input/iron-input.html">
 <link rel="import" href="../paper-button/paper-button.html">
 <link rel="import" href="../dude-collapse/dude-collapse.html">
 <link rel="import" href="../dude-property/dude-property.html">
 <link rel="import" href="../dude-hierarchy/dude-hierarchy.html">
+<link rel="stylesheet" href="../font-awesome/css/font-awesome.css">
 <!--
 `dude-graph-inspector` is a Polymer element which creates the inspector for dude-graph. In other words, it creates the sidebar that will be used for setting methods and properties.
 
